--- a/package.json
+++ b/package.json
@@ -5,24 +5,7 @@
   "author": "Faraz Syed <hello@farazsyed.com>",
   "license": "MIT",
   "private": true,
-  "keywords": [],
   "scripts": {
-    "build": "npm run lint && npm run clean && npm run compile",
-    "compile": "lerna exec --parallel 'cp ../../tsconfig.json . && tsc $TSCOPTS && rm tsconfig.json'",
-    "clean": "lerna exec --parallel rimraf lib",
-    "lint": "lerna exec -- tslint src/**/*.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "TSCOPTS='--watch' npm run build"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "jest": "^22.4.3",
-    "lerna": "^2.11.0",
-    "prettier": "^1.12.1",
-    "rimraf": "^2.6.2",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.12.0",
-    "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^2.8.3"
+    "setup": "rm -rf git && git init && rm package.json && cp internals/* . && rm -rf internals && npm install"
   }
 }
