--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "setup": "npm install && rimraf .git && git init && rm package.json && mv internals/* . && rm -r internals && rimraf node_modules && npm install"
+    "setup": "npm install && rimraf .git && rm package.json && rm .gitignore && mv internals/* . && rm -r internals && rimraf node_modules && git init && npm install"
   },
   "devDependencies": {
     "rimraf": "^2.6.2"
